[package]
name = "mysteryshack"
version = "0.2.0"
edition = "2021"

authors = ["Markus Unterwaditzer <markus@unterwaditzer.net>", "Etienne Membrives <etienne@membrives.fr>"]
license = "MIT"
keywords = ["remotestorage"]
readme = "README.md"

[lib]
name = "mysteryshack"
path = "src/mysteryshack/lib.rs"

[[bin]]
name = "mysteryshack"
test = false
doc = false

[dependencies]
atomicwrites = { git = "https://github.com/emembrives/rust-atomicwrites" }
base64 = "0.20"
chrono = "0.4"
clap = "3"
clippy = {git = "https://github.com/Manishearth/rust-clippy", version = "*", optional = true}
filetime = "0.2"
handlebars = "4.3"
hyper = "0.14"
nix = "0.26"
please-clap = "0.1"
quick-error = "2.0"
rand = { features = ["getrandom"], version = "0.8" }
regex = "1.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
termion = "1"
time = "0.3"
toml = "0.5"
unicase = "2.6"
url = "2.3"
webicon = { git = "https://github.com/emembrives/rust-webicon" }
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.1", features = [ "handlebars" ] }
rust-embed = "6.4"
csrf = "0.4"
argon2 = "0.4"
hmac = "0.12"
sha3 = "0.10"
password-hash = { version="0.4", features = ["alloc"] }
async-trait = "0.1"
sync_wrapper = "0.1"
futures = "0.3"

[dev-dependencies]
tempdir = "*"

[features]
default = []
